--- a/app/components/book/detailed.hbs
+++ b/app/components/book/detailed.hbs
@@ -1,9 +1,10 @@
 <Jumbo>
     <h2>{{@book.title}}</h2>
     <p>Great choice! Here's more info on this title.</p>
-    <a href="#" target="_blank" rel="external nofollow noopener noreferrer" class="share button">
+    <ShareButton @text="Check out {{@book.title}} on the TBR App!"
+        @hashtags="books,reading,tbr" @via="emberjs">
         Share on Twitter
-    </a>
+        </ShareButton>
 </Jumbo>
 
 <article class="rental detailed">
